--- a/README.adoc
+++ b/README.adoc
@@ -321,9 +321,10 @@ If you have a PostgreSQL server and want to run it on your local laptop you may 
 
 This will has the nicety of automagically picking port numbers and opening the browser once everything has started up.
 
-* Clone this repository with https://github.com/forbesmyester/esqlate[eSQLate] with `git clone https://github.com/forbesmyester/esqlate.git`.
 * Set up a PostgreSQL server and get the hostname, port, username and password.
+* Clone this repository with https://github.com/forbesmyester/esqlate[eSQLate] with `git clone https://github.com/forbesmyester/esqlate.git`.
 * Change into the directory you checked out the code into with `cd esqlate`
+* Run `npm install` to install dependencies etc.
 * Run `./esqlate`.
 
 ==== Docker Compose Method
@@ -348,7 +349,7 @@ Installation is relatively simple. All you need to do is install:
 
 === Running the Integration Tests
 
-There are some basic integration tests that run using http://www.cypress.io[Cyress]. To run them first bring up testing docker compose and then run the tests:
+There are some basic integration tests that run using http://www.cypress.io[Cypress]. To run them first bring up testing docker compose and then run the tests:
 
 [source,bash]
 ----
