doc: README tweaks

--- a/README.adoc
+++ b/README.adoc
@@ -329,15 +329,15 @@ This will has the nicety of automagically picking port numbers and opening the b
 
 ==== Docker Compose Method
 
-If you’re just trying eSQLate out the most simple way to test it out is to use https://github.com/docker/compose[Docker Compose].
+If you’re just trying eSQLate out the most simple way to test it out is to use https://github.com/docker/compose[Docker Compose]. There is a docker-compose.yml file right in this directory so all you’ll have to do is:
 
-If you check out this repository you’ll see a docker-compose.yml file. In the directory you checked it out to all you’ll have to do is:
-
-
+* Clone this repository with https://github.com/forbesmyester/esqlate[eSQLate] with `git clone https://github.com/forbesmyester/esqlate.git`.
+* Change into the directory you checked out the code into with `cd esqlate`
 * Clone https://github.com/forbesmyester/esqlate-server[eSQLate Server] with `[ ! -d "esqlate-server" ] && git clone git@github.com:forbesmyester/esqlate-server.git esqlate-server`.
 * Clone https://github.com/forbesmyester/esqlate-front[eSQLate Front] with `[ ! -d "esqlate-front" ] && git clone git@github.com:forbesmyester/esqlate-front.git esqlate-front`.
 * Bring up the services using `docker-compose build && docker-compose up`.
 * Customize the docker-compose.yml to meet your needs.
+* Open your web browser up to http://localhost:8080/
 
 ==== Directly on VM/Metal Method
 
