--- a/README.adoc
+++ b/README.adoc
@@ -321,11 +321,11 @@ If you have a PostgreSQL server and want to run it on your local laptop you may 
 
 This will has the nicety of automagically picking port numbers and opening the browser once everything has started up.
 
-* Set up a PostgreSQL server and get the hostname, port, username and password.
+* Set up a PostgreSQL server and get the hostname, port, username and password (You may want to use `docker-compose -f docker-compose-for-postgres-northwind.yml up` from this repository).
 * Clone this repository with https://github.com/forbesmyester/esqlate[eSQLate] with `git clone https://github.com/forbesmyester/esqlate.git`.
 * Change into the directory you checked out the code into with `cd esqlate`
 * Run `npm install` to install dependencies etc.
-* Run `./esqlate postgresql`.
+* Run `./esqlate postgresql` (If you used "docker-compose-for-postgres-northwind.yml" you could run `./esqlate postgresql  -h 127.0.0.1 -d postgres -U postgres -W postgres`).
 
 NOTE: This can be run using `./esqlate mysql` if you are using a MySQL server.
 
