--- a/README.adoc
+++ b/README.adoc
@@ -315,20 +315,6 @@ If you wish to hide the ``Employee Add'' menu item it is simple enough. Just cha
 
 === Installation
 
-==== Desktop Method
-
-If you have a PostgreSQL server and want to run it on your local laptop you may choose to use the desktop method.
-
-This will has the nicety of automagically picking port numbers and opening the browser once everything has started up.
-
-* Set up a PostgreSQL server and get the hostname, port, username and password (You may want to use `docker-compose -f docker-compose-for-postgres-northwind.yml up` from this repository).
-* Clone this repository with https://github.com/forbesmyester/esqlate[eSQLate] with `git clone https://github.com/forbesmyester/esqlate.git`.
-* Change into the directory you checked out the code into with `cd esqlate`
-* Run `npm install` to install dependencies etc.
-* Run `./esqlate postgresql` (If you used "docker-compose-for-postgres-northwind.yml" you could run `./esqlate postgresql  -h 127.0.0.1 -d postgres -U postgres -W postgres`).
-
-NOTE: This can be run using `./esqlate mysql` if you are using a MySQL server.
-
 ==== Docker Compose Method
 
 If you’re just trying eSQLate out the most simple way to test it out is to use https://github.com/docker/compose[Docker Compose]. There is a docker-compose.yml file right in this directory so all you’ll have to do is:
@@ -346,6 +332,21 @@ Installation is relatively simple. All you need to do is install:
 * https://www.postgresql.org/[PostgreSQL] The most awesome SQL database.
 * https://github.com/forbesmyester/esqlate-server[eSQLate Server] Which is provides the API functions and does the actual database queries.
 * https://github.com/forbesmyester/esqlate-front[eSQLate Front] talks to eSQLate Server and provides a web based interface to the user.
+
+
+==== Desktop Method (not really recommended as it's rather brittle)
+
+If you have a PostgreSQL server and want to run it on your local laptop you may choose to use the desktop method.
+
+This will has the nicety of automagically picking port numbers and opening the browser once everything has started up.
+
+* Set up a PostgreSQL server and get the hostname, port, username and password (You may want to use `docker-compose -f docker-compose-for-postgres-northwind.yml up` from this repository).
+* Clone this repository with https://github.com/forbesmyester/esqlate[eSQLate] with `git clone https://github.com/forbesmyester/esqlate.git`.
+* Change into the directory you checked out the code into with `cd esqlate`
+* Run `npm install` to install dependencies etc.
+* Run `./esqlate postgresql` (If you used "docker-compose-for-postgres-northwind.yml" you could run `./esqlate postgresql  -h 127.0.0.1 -d postgres -U postgres -W postgres`).
+
+NOTE: This can be run using `./esqlate mysql` if you are using a MySQL server.
 
 === Running the Integration Tests
 
