--- a/README.adoc
+++ b/README.adoc
@@ -321,13 +321,24 @@ If you have a PostgreSQL server and want to run it on your local laptop you may 
 
 This will has the nicety of automagically picking port numbers and opening the browser once everything has started up.
 
-* Set up a PostgreSQL server and get the hostname, port, username and password (You may want to use `docker-compose -f docker-compose-for-postgres-northwind.yml up` from this repository).
 * Clone this repository with https://github.com/forbesmyester/esqlate[eSQLate] with `git clone https://github.com/forbesmyester/esqlate.git`.
+* Set up a PostgreSQL server and get the hostname, port, username and password (You may want to use `docker-compose -f docker-compose-for-postgres-northwind.yml up` from this repository).
 * Change into the directory you checked out the code into with `cd esqlate`
 * Run `npm install` to install dependencies etc.
 * Run `./esqlate postgresql` (If you used "docker-compose-for-postgres-northwind.yml" you could run `./esqlate postgresql  -h 127.0.0.1 -d postgres -U postgres -W postgres`).
 
 NOTE: This can be run using `./esqlate mysql` if you are using a MySQL server.
+
+==== As an App method
+
+Installation is relatively simple however there are a few parts.
+
+* https://www.postgresql.org/[PostgreSQL] The most awesome SQL database - somewhere.
+* https://github.com/forbesmyester/wv-linewise[WVLinewise] - Put a the binary somewhere in your $PATH named `wv_linewise`
+* https://github.com/forbesmyester/pipeawesome2[Pipeawesome 2] - Put a the binary somewhere in your $PATH named `pipeawesome2`
+* Configure environmental variables to access PostgreSQL. See Guided method - Terminal 2.
+* Checkout ( https://github.com/forbesmyester/esqlate[this repository] ) and change to this directory.
+* Run `pipeawesome2 process --config ./esqlate.pa.yaml
 
 ==== Docker Compose Method
 
@@ -339,6 +350,53 @@ If you’re just trying eSQLate out the most simple way to test it out is to use
 * Open your web browser up to http://localhost:8800/
 * Customize the docker-compose.yml to meet your needs.
 
+==== Guided Method
+
+* Clone this repository with https://github.com/forbesmyester/esqlate[eSQLate] with `git clone https://github.com/forbesmyester/esqlate.git`.
+
+Terminal 1:
+
+Set up a PostgreSQL server and get the hostname, port, username and password (You may want to use `docker-compose -f docker-compose-for-postgres-northwind.yml up` from this repository).
+
+Terminal 2:
+
+* Set up the environmental variables:
+
+[source,bash]
+----
+export PGHOST=postgres
+export PGPORT=5432
+export PGUSER=postgres
+export PGPASSWORD=postgres
+export PGDATABASE=postgres
+export LISTEN_PORT=8803
+export LISTEN_ONLY_LOCALHOST=1
+----
+
+* Launch the server
+
+[source,bash]
+----
+npm run-script server
+----
+
+Terminal 3:
+
+* Set up the environmental variables:
+
+[source,bash]
+----
+export API_SERVER=http://localhost:8803
+export LISTEN_PORT=8804
+----
+
+* Launch the server
+
+[source,bash]
+----
+npm run-script front
+----
+
 ==== Directly on VM/Metal Method
 
 Installation is relatively simple. All you need to do is install:
@@ -349,11 +407,12 @@ Installation is relatively simple. All you need to do is install:
 
 === Running the Integration Tests
 
-There are some basic integration tests that run using http://www.cypress.io[Cypress]. To run them first bring up testing docker compose and then run the tests:
+There are some basic integration tests that run using http://www.cypress.io[Cypress]. To run them first bring up testing docker compose and then run the tests with `node_modules/.bin/cypress run`:
 
 [source,bash]
 ----
 docker-compose -f ./docker-compose-integration.yml up
+node_modules/.bin/cypress run
 ----
 
 === Contributors
